--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,13 @@ dependencies = [
     "python-dotenv",
 ]
 
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["src/yt_to_blog"]
+
 [dependency-groups]
 dev = [
     "ruff>=0.9.6",
